# VulkanCpp

./: CMakeLists.txt  README.md
cmake/: compiler_warnings.cmake  dependencies.cmake  precompiled_headers.cmake  sanitizers.cmake
src/: CMakeLists.txt  main.cxx
src/cm/: CMakeLists.txt  carray.cxx  log.cxx  move_only_ptr.cxx  non_owning_ptr.cxx  types.cxx  vke.cxx  window.cxx
src/cm/include/: vke_macro.hxx
src/nce/: CMakeLists.txt  carray.cxx  move_only_ptr.cxx  non_owning_ptr.cxx  types.cxx  vke.cxx  window.cxx
src/nce/include/: log.hxx  vke_macro.hxx
src/nce/include/nce/: carray.hxx  keycode.hxx  log.hxx  move_only_ptr.hxx  non_owning_ptr.hxx  types.hxx  vertex.hxx  vke.hxx  vke_macro.hxx  window.hxx
src/ngui/: CMakeLists.txt  btree.cxx  btree_test.cxx  frame.cxx  ngui.cxx
src/ngui/include/ngui/: btree.hxx  catpuccin.hxx  frame.hxx  types.hxx
src/render_api/: CMakeLists.txt  instance.cxx  surface.cxx
src/render_api/include/ncad/render_api/: result.hxx  vert2d.hxx
src/render_api/include/render_api/: deleters.hxx  instance.hxx  result.hxx  surface.hxx
src/shaders/: CMakeLists.txt  hello.frag
src/todo/: todo.hxx
src/types/: CMakeLists.txt  types.hxx
