add_library(nce)

target_sources(nce
    PRIVATE
    window.cxx
    vke.cxx
    )
target_include_directories(nce PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_link_libraries(nce 
    fmt
    X11::xcb 
    X11::xcb_keysyms
    X11::xkbcommon
    X11::xkbcommon_X11
    )
target_precompile_headers(nce
    PUBLIC
    <algorithm>
    <any>
    <array>
    <bitset>
    <cstddef>
    <cstdint>
    <cstdio>
    <filesystem>
    <fmt/format.h>
    <format>
    <functional>
    <iostream>
    <limits>
    <memory>
    <optional>
    <ranges>
    <set>
    <string>
    <string_view>
    <tuple>
    <unistd.h>
    <fstream>
    <unordered_map>
    <vector>
    )
