add_library(nce)
nce_set_compiler_warnings(nce)
nce_set_sanitizers(nce)

target_sources(nce
    PRIVATE
    window.cxx
    vke.cxx
    )
target_include_directories(nce PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_link_libraries(nce 
    Vulkan::Vulkan
    fmt
    X11::xcb 
    X11::xcb_keysyms
    X11::xkbcommon
    X11::xkbcommon_X11
    X11::xcb_icccm
    )
target_precompile_headers(nce
    PUBLIC
    <algorithm>
    <any>
    <array>
    <bitset>
    <cstddef>
    <cstdint>
    <cstdio>
    <filesystem>
    <fmt/format.h>
    <format>
    <fstream>
    <functional>
    <iostream>
    <limits>
    <map>
    <memory>
    <optional>
    <ranges>
    <set>
    <string>
    <string_view>
    <tuple>
    <unistd.h>
    <unordered_map>
    <vector>
    )
